[package]
name = "ggez"
description = "A lightweight game framework for making 2D games with minimum friction, inspired by Love2D."
version = "0.9.0"
homepage = "https://ggez.rs"
repository = "https://github.com/ggez/ggez"
documentation = "https://docs.rs/ggez"
keywords = ["ggez", "graphics", "2D", "game", "engine"]
authors = [
   "Rafael Epplee <raffomania@gmail.com>",
   "Sven-Hendrik Haase <svenstaro@gmail.com>",
   "Simon Heath <icefoxen@gmail.com>",
]

edition = "2021"
license = "MIT"
readme = "README.md"
categories = ["game-engines"]
build = "build.rs"
exclude = ["docs", "resources", "!LiberationMono-Regular.ttf"]

[workspace]
members = [
  "crates/*"
]

[workspace.dependencies]
zip = { version = "0.6", default-features = false, features = ["deflate", "zstd", "bzip2"] }
lyon = "1.0"
glyph_brush = "0.7"
crevice = "0.13"
mint = "0.5.9"
wgpu = "0.16"
log = "0.4"
toml = "0.5"
smart-default = "0.7"
serde = { version = "1.0", features = ["derive"] }
bytemuck = { version = "1.12", features = ["derive"] }
winit = { version = "0.28.3", features = ["serde"] }
glam = { version = "0.24", features = ["mint"] }

[lib]
name = "ggez"
path = "src/lib.rs"

[features]
default = ["c_dependencies", "audio", "gamepad"]
# zip-compression = ["ggez_core/zip-compression", "ggez_error/zip-compression"]
mp3 = ["ggez_audio/mp3"]
multithread-image-decoding = ["ggez_core/multithread-image-decoding"]
c_dependencies = ["mp3"]
audio = ["ggez_audio", "ggez_core/audio"]
gamepad = ["ggez_core/gamepad"]

[dependencies]
ggez_core = { path = "crates/ggez_core" }
ggez_error = { path = "crates/ggez_error" }
ggez_audio = { path = "crates/ggez_audio", optional = true }
ggez_3d = { path = "crates/ggez_3d", optional = true }
ggez_2d = { path = "crates/ggez_2d", optional = true }

gilrs = { version = "0.10", optional = true }
memoffset = "0.9"

[dev-dependencies]
chrono = "0.4"
fern = "0.6"
oorandom = "11"
argh = "0.1"
rand = "0.8"
keyframe = "1"
keyframe_derive = "1"
num-traits = "0.2"
num-derive = "0.3"

skeptic = "0.13"
getrandom = "0.2"

[build-dependencies]
skeptic = "0.13"
