[package]
name = "ggez"
description = "A lightweight game framework for making 2D games with minimum friction, inspired by Love2D."
version = "0.9.3"
homepage = "https://ggez.rs"
repository = "https://github.com/ggez/ggez"
documentation = "https://docs.rs/ggez"
keywords = ["ggez", "graphics", "2D", "game", "engine"]
authors = [
   "Rafael Epplee <raffomania@gmail.com>",
   "Sven-Hendrik Haase <svenstaro@gmail.com>",
   "Simon Heath <icefoxen@gmail.com>",
]

edition = "2021"
license = "MIT"
readme = "README.md"
categories = ["game-engines"]
build = "build.rs"
exclude = ["docs", "resources", "!LiberationMono-Regular.ttf"]

[lib]
name = "ggez"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
# default = ["c_dependencies", "audio", "gamepad", "3d", "gltf", "obj"]
default = ["gamepad", "3d", "gltf", "obj"]
zip-compression = ["zip/bzip2", "zip/zstd"]
mp3 = ["rodio/mp3"]
multithread-image-decoding = ["image/hdr", "image/jpeg_rayon"]
c_dependencies = ["zip-compression", "mp3"]
audio = ["rodio"]
gamepad = ["gilrs"]
3d = []
gltf = ["dep:gltf", "base64", "percent-encoding", "3d"]
obj = ["obj-rs", "3d"]

[dependencies]
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
instant = { version = "0.1", features = ["inaccurate", "wasm-bindgen"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
bitflags = "2.1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
directories = "5.0"
wgpu = { version = "0.17", features = ["webgl"] }
glyph_brush = "0.7"
winit = { version = "0.28.3", features = ["serde"] }
image = { version = "0.24", default-features = false, features = [
   "gif",
   "png",
   "pnm",
   "tga",
   "tiff",
   "webp",
   "bmp",
   "dxt",
   "jpeg",
] }
rodio = { version = "0.17", optional = true, default-features = false, features = [
   "flac",
   "vorbis",
   "wav",
] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
log = "0.4"
lyon = "1.0"
smart-default = "0.7"
glam = { version = "0.24", features = ["mint"] }
# Has to be the same version of mint that our math lib uses here.
mint = "0.5.9"
gilrs = { version = "0.10", optional = true }
approx = "0.5"
bytemuck = { version = "1.12", features = ["derive"] }
pollster = "0.3"
memoffset = "0.9"
crevice = "0.13"
typed-arena = "2.0"
ordered-float = "3.3"
percent-encoding = { version = "2.3.0", optional = true }
base64 = { version = "0.21.2", optional = true }
gltf = { version = "1.2.0", optional = true, default-features = false, features = ["utils"] }
obj-rs = { version = "0.7.1", optional = true }
num-traits = "0.2"

[dev-dependencies]
chrono = "0.4"
fern = "0.6"
oorandom = "11"
argh = "0.1"
rand = "0.8"
keyframe = "1"
keyframe_derive = "1"
num-derive = "0.3"

skeptic = "0.13"
getrandom = { version = "0.2", features = ["js"] }

[build-dependencies]
skeptic = "0.13"
