[package]
name = "ggraphics"
version = "0.0.2"
authors = ["Simon Heath <icefoxen@gmail.com>"]
edition = "2018"
description = "A 2d graphics library (tentative)"
license = "MIT"


[dependencies]
log = "0.4"
bytemuck = "1"
glam = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glow = {version = "0.4.0", default-features=false}
glutin = "0.22.0"
winit = {version = "0.20.0", features=["web-sys"]}


#[target.'cfg(target_arch = "wasm32")'.dependencies]
#glow = {version = "0.3.0-alpha3", default-features=false, features=["stdweb"]}
#stdweb  = { version = "0.4.18" }
#webgl_stdweb = { version = "0.3" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
glow = {version = "0.4.0", default-features=false, features=["web-sys"]}
web_sys = { version = "0.3", package = "web-sys", features=["console"] }
wasm-bindgen = { version = "0.2" }
console_error_panic_hook = "0.1"
winit = {version = "0.20.0-alpha4", features=["web-sys"]}

[dev-dependencies]
image = {version = "0.22", default-features=false, features=["jpeg", "png_codec", "pnm", "tiff", "webp", "bmp", "hdr", "dxt"] }
pretty_env_logger = "0.4"
instant = "0.1"
oorandom = "11"
