[package]
name = "gvfs"
description = "A Rust crate providing a configurable virtual file system for game assets, a la PhysFS"
version = "0.1.2"
homepage = "http://ggez.rs"
repository = "https://github.com/ggez/gvfs"
documentation = "https://docs.rs/gvfs"
keywords = ["filesystem", "game", "webassembly", "zip"]
authors = [
   "Simon Heath <icefoxen@gmail.com>",
]

edition = "2018"
license = "MIT / Apache-2.0"
readme = "README.md"
categories = ["filesystem", "game-engines"]
build = "build.rs"

[badges]
maintenance = { status = "experimental" }

[lib]
name = "gvfs"
path = "src/lib.rs"

[features]

[dependencies]
directories = "2"
zip = { version = "0.5", default-features = false }
log = "0.4"

[dev-dependencies]
skeptic = "0.13"

[build-dependencies]
skeptic = "0.13"

