[package]
name = "ggez_audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mint.workspace = true
ggez_error = { path = "../ggez_error", features = ["audio"]}
ggez_filesystem = { path = "../ggez_filesystem" }
ggez_traits = { path = "../ggez_traits" }

rodio = { version = "0.17", default-features = false, features = [
   "flac",
   "vorbis",
   "wav",
] }

[features]
mp3 = ["rodio/mp3"]

[lib]
name = "ggez_audio"
path = "src/lib.rs"

