[package]
name = "ggez_core"
version = "0.1.0"
edition = "2021"


[dependencies]
# Workspace depends come first for organization
mint.workspace = true
winit.workspace = true
glam.workspace = true
log.workspace = true
toml.workspace = true
zip.workspace = true
smart-default.workspace = true
ggez_error = { path = "../ggez_error" }
ggez_graphics = { path = "../ggez_graphics" }
ggez_traits = { path = "../ggez_traits" }
ggez_time = { path = "../ggez_time" }
ggez_conf = { path = "../ggez_conf" }
ggez_audio = { path = "../ggez_audio", optional = true }
ggez_filesystem = { path = "../ggez_filesystem" }
bitflags = "2.1"
pollster = "0.3"
image = { version = "0.24", default-features = false, features = [
   "gif",
   "png",
   "pnm",
   "tga",
   "tiff",
   "webp",
   "bmp",
   "dxt",
] }
gilrs = { version = "0.10", optional = true }
# wgpu.workspace = true
# crevice.workspace = true
# bytemuck.workspace = true
# serde.workspace = true
# lyon.workspace = true
# glyph_brush.workspace = true
# Path's depends next
# directories = "5.0"
# typed-arena = "2.0"
# ordered-float = "3.3"
# approx = "0.5"

[features]
multithread-image-decoding = ["image/hdr", "image/jpeg_rayon"]
audio = ["ggez_audio"]
gamepad = ["gilrs", "ggez_error/gamepad"]
