[package]
name = "ggez_error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit.workspace = true
wgpu.workspace = true
toml.workspace = true
glyph_brush.workspace = true
lyon.workspace = true
zip.workspace = true
gilrs = { version = "0.10", optional = true }
rodio = { version = "0.17", optional = true, default-features = false, features = [
   "flac",
   "vorbis",
   "wav",
] }
image = { version = "0.24", default-features = false, features = [
   "gif",
   "png",
   "pnm",
   "tga",
   "tiff",
   "webp",
   "bmp",
   "dxt",
] }

[lib]
name = "ggez_error"
path = "src/lib.rs"

[features]
audio = ["rodio"]
mp3 = ["audio", "rodio/mp3"]
gamepad = ["gilrs"]
